--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,15 +22,107 @@
         android:text="Start"
         android:textColor="@android:color/white" />
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableLayout"
+        android:layout_below="@+id/btn_switch"
+        android:stretchColumns="*"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="UserId"
+                android:id="@+id/textView2"
+                android:layout_marginLeft="4dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_user_id"
+                android:editable="false"
+                android:singleLine="true"
+                android:layout_span="3"
+                android:inputType="none" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="ChannelId"
+                android:id="@+id/textView3"
+                android:layout_marginLeft="4dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_channel_id"
+                android:layout_span="3"
+                android:singleLine="true"
+                android:editable="false"
+                android:inputType="none" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="VersionId"
+                android:id="@+id/textView4"
+                android:layout_marginLeft="4dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_version_id"
+                android:layout_span="3"
+                android:singleLine="true"
+                android:editable="false"
+                android:inputType="none" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:id="@+id/btn_edit"
+                android:layout_span="4"
+                android:background="#0000ff"
+                android:textColor="#ffffff" />
+        </TableRow>
+
+    </TableLayout>
+
     <TextView
         android:id="@+id/txt_state"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/btn_switch"
         android:layout_centerHorizontal="true"
-        android:autoText="false"
         android:background="#f4e29d"
         android:gravity="center_vertical"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_below="@+id/tableLayout" />
 
 </RelativeLayout>
